clusters/cl01tl/manifests/grimmory/HTTPRoute-grimmory.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grimmory
  labels:
    app.kubernetes.io/instance: grimmory
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: grimmory
    helm.sh/chart: grimmory-5.3.0
  namespace: grimmory
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway
      namespace: "traefik"
  hostnames:
    - "grimmory.alexlebens.dev"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: grimmory
          namespace: grimmory
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
